tests/baselines/reference/ES5For-of22.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of22.ts(3,5): error TS2304: Cannot find name 'console'.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of22.ts (1 errors) ====
    for (var x of [1, 2, 3]) {
        let _a = 0;
        console.log(x);
        ~~~~~~~
!!! error TS2304: Cannot find name 'console'.
    }